# Code-Review

./: README.md  main.py  model.py  pyproject.toml
chains/: __init__.py  analysis_chain.py  review_chain.py  security_chain.py
graph/: __init__.py  builder.py  router.py  state.py
nodes/: __init__.py  aggregator.py  ast_analyzer.py  dependency_auditor.py  docs_agent.py  fix_suggester.py  intake.py  performance_analyzer.py  planner.py  ranker.py  report_generator.py  research_agent.py  security_scanner.py  semantic_analyzer.py  style_agent.py  validator.py
tests/: conftest.py  test_chains.py  test_nodes.py
tests/fixtures/: sample.patch  sample.py
tools/: __init__.py  ast_parser.py  complexity.py  diff_parser.py  secret_scanner.py
